<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_background">

    <CheckBox
        android:id="@+id/checkBox12"
        android:layout_width="136dp"
        android:layout_height="32dp"
        android:layout_marginTop="20dp"
        android:text="@string/skill_6"
        android:checked="true"
        android:enabled="false"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/checkBox8"
        app:layout_constraintTop_toBottomOf="@+id/checkBox11"
        tools:text="@string/skill_6" />

    <CheckBox
        android:id="@+id/checkBox11"
        android:layout_width="132dp"
        android:layout_height="32dp"
        android:layout_marginTop="20dp"
        android:text="@string/skill_5"
        android:checked="true"
        android:enabled="false"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/checkBox7"
        app:layout_constraintTop_toBottomOf="@+id/checkBox10"
        tools:text="@string/skill_5" />

    <CheckBox
        android:id="@+id/checkBox10"
        android:layout_width="140dp"
        android:layout_height="32dp"
        android:layout_marginTop="32dp"
        android:checked="true"
        android:enabled="false"
        android:text="@string/skill_4"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/checkBox"
        app:layout_constraintTop_toBottomOf="@+id/aboutCourse"
        tools:text="@string/skill_4" />

    <CheckBox
        android:id="@+id/checkBox8"
        android:layout_width="132dp"
        android:layout_height="32dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="20dp"
        android:checked="true"
        android:text="@string/skill_3"
        android:enabled="false"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox7"
        tools:text="@string/skill_3" />

    <CheckBox
        android:id="@+id/checkBox7"
        android:layout_width="132dp"
        android:layout_height="32dp"
        android:checked="true"
        android:layout_marginStart="48dp"
        android:layout_marginTop="20dp"
        android:text="@string/skill_2"
        android:enabled="false"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox"
        tools:text="@string/skill_2" />

    <TextView
        android:id="@+id/aboutCourse"
        android:layout_width="233dp"
        android:layout_height="23dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="20dp"
        android:text="@string/about_course"
        android:textStyle="bold"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutName" />

    <TextView
        android:id="@+id/aboutName"
        android:layout_width="233dp"
        android:layout_height="23dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="20dp"
        android:text="@string/about_name"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutId" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="182dp"
        android:layout_height="113dp"
        android:layout_marginTop="28dp"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/xd" />

    <TextView
        android:id="@+id/aboutId"
        android:layout_width="233dp"
        android:layout_height="23dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="28dp"
        android:text="@string/about_student"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="132dp"
        android:layout_height="32dp"
        android:layout_marginStart="48dp"
        android:checked="true"
        android:enabled="false"
        android:layout_marginTop="32dp"
        android:text="@string/skill_1"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutCourse"
        tools:text="@string/skill_1" />
</androidx.constraintlayout.widget.ConstraintLayout>
